# chemeleon2

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  run-readme.md  run1.sh  run2-ldm.sh  tutorial.ipynb
.github/workflows/: ci.yml  docs-deploy.yaml
.specify/memory/: constitution.md
checkpoints/: checkpoints.yaml
configs/: sweep_vae.yaml  train_ldm.yaml  train_predictor.yaml  train_rl.yaml  train_vae.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  ema.yaml  model_checkpoint.yaml
configs/custom_reward/: atomic_density.yaml  bsun_reward.yaml  csun_reward.yaml  custom_reward.yaml  predictor_band_gap.yaml  rl_bandgap.yaml  rl_dng.yaml
configs/data/: alex_mp_20.yaml  alex_mp_20_bandgap.yaml  mp-120.yaml  mp-20.yaml  mp-40.yaml  mp_amorphous.yaml
configs/experiment/: rl_custom_reward.yaml
configs/experiment/alex_mp_20/: ldm_composition.yaml  ldm_csp.yaml  ldm_null.yaml  rl_dng.yaml  vae_csp.yaml  vae_dng.yaml
configs/experiment/alex_mp_20_bandgap/: ldm_bandgap.yaml  ldm_bandgap_lora.yaml  predictor_dft_band_gap.yaml  rl_bandgap.yaml
configs/experiment/crystal_transformer/mp_20/: sweep_vae_dng.yaml  vae_dng.yaml
configs/experiment/mp_120/: ldm_chemical_system_finetuned_from_rl_dng.yaml  ldm_composition_finetuned_from_rl_dng.yaml  ldm_composition_lora_finetuned_from_rl_dng.yaml  ldm_null.yaml  ldm_null_finetuned_from_alex_mp_20.yaml  rl_dng.yaml  rl_ldm_composition_finetuned_from_rl_dng.yaml  vae_dng.yaml  vae_dng_finetuned_from_alex_mp_20.yaml
configs/experiment/mp_20/: ldm_composition.yaml  ldm_csp.yaml  ldm_null.yaml  rl_composition.yaml  rl_csp.yaml  vae_csp.yaml  vae_dng.yaml
configs/experiment/mp_40/: ldm_csp.yaml  rl_csp.yaml  rl_dng.yaml  vae_dng.yaml
configs/experiment/mp_amorphous/: mp_amorphous.yaml
configs/ldm_module/: ldm_module.yaml
configs/ldm_module/denoiser/: default.yaml  dit_b.yaml  dit_l.yaml  dit_s.yaml
configs/logger/: wandb.yaml
configs/paths/: default.yaml
configs/rl_module/: rl_module.yaml
configs/scheduler/: constant.yaml  cosine_annealing.yaml  one_cycle.yaml  reduce_lr_on_plateau.yaml  warmup_linear.yaml
configs/trainer/: default.yaml
configs/vae_module/: vae_module.yaml
configs/vae_module/decoder/: transformer.yaml
configs/vae_module/encoder/: crystal_transformer.yaml  cspnet.yaml  transformer.yaml
configs/vae_module/pos_embedding/: learned.yaml  none.yaml  sinusoidal.yaml
custom_reward/: atomic_density.py  custom_reward.py  predictor_bandgap.py
data/alex_mp_20_bandgap/: README.md
data/mp-120/: data_preparation.ipynb
data/mp-20/: README.md
docs/: CONTRIBUTING.md  PLAN_DOC.md  contributing.md  custom.css  index.md  myst.yml
docs/api/: index.md
docs/architecture/: data-pipeline.md  index.md  ldm-module.md  rl-module.md  vae-module.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: custom-rewards.md  evaluation.md  training.md
docs/user-guide/rewards/: atomic-density.md  dng-reward.md  index.md  predictor-reward.md
docs/user-guide/training/: index.md  ldm.md  predictor.md  rl.md  vae.md
notebooks/: check-permute.ipynb
scripts/: evaluate.sh  sweep_vae.sh  train_ldm.sh  train_predictor.sh  train_rl.sh  train_vae.sh
specs/001-this-repository-was/: plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: evaluate.py  paths.py  sample.py  sweep_vae.py  train_ldm.py  train_predictor.py  train_rl.py  train_vae.py
src/data/: data_augmentation.py  datamodule.py  dataset_util.py  graph_utils.py  num_atom_distributions.py  schema.py
src/data/components/: mp_dataset.py
src/ldm_module/: condition.py  ldm_module.py
src/ldm_module/denoisers/: dit.py
src/ldm_module/diffusion/: __init__.py  diffusion_utils.py  gaussian_diffusion.py  respace.py  timestep_sampler.py
src/rl_module/: components.py  reward.py  rl_module.py
src/utils/: cl_score.py  ema_callback.py  featurizer.py  instantiators.py  metrics.py  scatter.py  timeout.py  visualize.py
src/vae_module/: __init__.py  positional_embeddings.py  predictor_module.py  vae_module.py
src/vae_module/decoders/: transformer.py
src/vae_module/encoders/: crystal_transformer.py  cspnet.py  transformer.py
tests/: conftest.py
tests/baseline/: test_ldm_module.py  test_rl_module.py  test_vae_module.py
tests/contract/: test_github_actions.py  test_precommit_config.py  test_pyright_config.py  test_ruff_config.py  test_setup_script.py
tests/symmetry/: test_crystal_transformer_symmetry.py
